@@ -1670,6 +1670,7 @@ func_all_modules ()
   func_module mkdir
   func_module mkstemp
   func_module mkdtemp
+  func_module poll
   func_module stat
   func_module lstat
   func_module timespec
